{
    "name": "PlayerInputSystem",
    "maps": [
        {
            "name": "PlayerControl",
            "id": "58687574-3195-43db-9ece-6be4df924483",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1c4748a8-c6b2-4dcd-874b-953c43b0459d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Turn",
                    "type": "Value",
                    "id": "fe8071ce-56a7-4f43-86b6-9a29d52ce7be",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FireWeapon",
                    "type": "Button",
                    "id": "1631b6fc-4597-45a4-a98b-736e5f0d0499",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "97aa73ab-bafe-4f50-ab21-53971bfb01d2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f2d39ca7-6973-488a-9f1a-bf71572df3bb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "LocalPlayerContol",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1df184c3-1314-46bc-9118-dc5cf3892a3b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "LocalPlayerContol",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e7486e2a-6ef7-4d11-861d-4ce5a856eb5e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "LocalPlayerContol",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7a018825-b35d-4be4-a887-5af7d0b3f4f4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "LocalPlayerContol",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5acff4ea-f765-49b1-ba41-7b0b513de253",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "LocalPlayerContol",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9080d0f3-fce5-4243-a0b1-aa312062f790",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "LocalPlayerContol",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "13cb9777-1524-4a87-a033-0719dd77918d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0e5114f0-4860-4c5c-98a0-33f4b49849bc",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "LocalPlayerContol",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4645ac81-5a23-4606-a9f4-d4791912dc07",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "LocalPlayerContol",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9051db90-46f4-469f-a7dc-2a0226b9e03e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "LocalPlayerContol",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2d7a6191-77f5-43f1-a4a0-1ecfc65fa31c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "LocalPlayerContol",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "64ca1b6d-abb0-4d3f-b63c-8e6966d7529b",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "LocalPlayerContol",
                    "action": "FireWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d389a6f-347f-4d6e-aaf8-a3be0600e715",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "LocalPlayerContol",
                    "action": "FireWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "LocalPlayerContol",
            "bindingGroup": "LocalPlayerContol",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}